# kwaak

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.tests  EVALUATIONS.md  README.md  dist-workspace.toml  justfile  kwaak.toml  rust-toolchain.toml  typos.toml
.github/workflows/: coverage.yml  release-dist.yml  release-plz.yml  release.yml  tests.yml
benchmarks/notebooks/: query-pipeline.ipynb
benchmarks/ragas/: .gitignore  METRICS.md  README.md  pyproject.toml
benchmarks/ragas/datasets/: sample.json
benchmarks/ragas/faithfulness_logs/: unknown_verdicts.json
benchmarks/ragas/src/: edit_ground_truths.py
benchmarks/ragas/src/kwaak_bench_ragas/: benchmark.py  custom_metrics.py  dataset.py  evaluation.py  main.py  metrics.py
benchmarks/ragas/src/kwaak_bench_ragas/baseline/: main.py  model.py
benchmarks/ragas/src/templates/: index.html  question.html
benchmarks/ragas/templates/: question.html
benchmarks/ragas/tests/: test_edit_ground_truths.py  test_metrics.py
benchmarks/swe/: .gitignore  README.md  pyproject.toml  swe_bench_results.json
benchmarks/swe/src/kwaak_bench_swe/: benchmark.py  docker.py  docker_instance.py  kwaak.template.toml  main.py  swe_bench_instance.py  trial.py
benchmarks/swe/src/kwaak_bench_swe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
benchmarks/swe/tests/: test_benchmark.py  test_docker_instance.py  test_trial.py  test_trial_integration.py
src/: chat.rs  chat_message.rs  cli.rs  commands.rs  kwaak_tracing.rs  lib.rs  main.rs  onboarding.rs  repository.rs  runtime_settings.rs  storage.rs  templates.rs  test_utils.rs  tracing.rs
src/agent/: commit_and_push.rs  conversation_summarizer.rs  docker_tool_executor.rs  env_setup.rs  git_agent_environment.rs  mod.rs  running_agent.rs  session.rs  tool_summarizer.rs  tools.rs  util.rs  v1.rs
src/commands/: command.rs  handler.rs  mod.rs  responder.rs  running_agent.rs
src/config/: config.rs  defaults.rs  llm_configuration.rs  mcp.rs  mod.rs  (+1 more)
templates/: github_search_results.md  kwaak.toml  pull_request.md
tests/: auto_scrolling.rs  cli_init.rs  diff_commands.rs  github_issue_command.rs  retry_chat.rs  test_tools.rs
(+64 files in other folders)
