[project]
name = "kwaak-bench-ragas"
version = "0.1.0"
description = "RAGAS evaluation framework for the Kwaak agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "datasets>=2.16.1",
    "ragas>=0.1.3",
    "langchain>=0.1.0",
    "pandas>=2.0.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.12.0",
    "openai>=1.12.0",
]

[project.scripts]
kwaak-bench-ragas = "kwaak_bench_ragas.main:main"
kwaak-bench-ragas-baseline = "kwaak_bench_ragas.baseline.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["kwaak_bench_ragas", "kwaak_bench_ragas.baseline"]
